Added initial code for notification

--- a/src/pages/config/config.html
+++ b/src/pages/config/config.html
@@ -18,10 +18,10 @@
     <ion-datetime displayFormat="HH:mm" [(ngModel)]="tolerance"></ion-datetime>
   </ion-item>
 
-  <ion-item>
+  <!-- <ion-item>
     <ion-label stacked>Hora de Entrada Padrão</ion-label>
     <ion-datetime displayFormat="HH:mm" [(ngModel)]="standardInHour"></ion-datetime>
-  </ion-item>
+  </ion-item> -->
   
   <ion-item>
     <button item-right ion-button outline color="secondary" (click)='showAlert()'>Gravar</button>
