Added floating button to start timer

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -37,7 +37,9 @@
         <ion-datetime displayFormat="HH:mm"  [disabled]="isDisabled ? '' : null" [(ngModel)]="hourOut2"></ion-datetime>
       </ion-item>
 
-    
-
+      <ion-fab bottom right>
+        <button ion-fab (click)="clockIn()" color="secondary">Iniciar</button>
+      </ion-fab>
 
 </ion-content>
+
