--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -37,8 +37,8 @@
         <ion-datetime displayFormat="HH:mm"  [disabled]="isDisabled ? '' : null" [(ngModel)]="hourOut2"></ion-datetime>
       </ion-item>
 
-      <ion-fab bottom right>
-        <button ion-fab (click)="clockIn()" color="secondary">Iniciar</button>
+      <ion-fab bottom center >
+        <button ion-fab (click)="clockIn()" color="secondary" style="margin-bottom:50%">Iniciar</button>
       </ion-fab>
 
 </ion-content>
