Added home started/stopped state
To persist through screen changes and app close/open.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -24,7 +24,7 @@
       <ion-item>
         <ion-label floating>Hora Entrada</ion-label>
         <!-- <ion-input type="text" [(ngModel)]="hourIn" (input)="calculate()"></ion-input> -->
-        <ion-datetime displayFormat="HH:mm" [(ngModel)]="hourIn" (ionChange)="calculate()"></ion-datetime>
+        <ion-datetime displayFormat="HH:mm" [(ngModel)]="hourIn" (ionChange)="onTimeChange()"></ion-datetime>
       </ion-item>
 
       <ion-item>
