Added native picker for tolerance time
Added native picker for tolerance time.
Fixed initial config buttons
Fixed stopped after application forced closed.

--- a/src/pages/config/config.html
+++ b/src/pages/config/config.html
@@ -10,19 +10,20 @@
 <ion-content padding>
   <ion-item>
     <ion-label stacked >Horas a Trabalhar</ion-label>
-    <ion-input type="text" [readonly]="true" showWhen="android" [(ngModel)]="timeToWork" (focus)="nativePicker('timeToWork')" (click)="nativePicker('timeToWork')"></ion-input>
+    <ion-input type="text" [readonly]="true" showWhen="android" [(ngModel)]="timeToWork" (ionFocus)="nativePicker('timeToWork')" (click)="nativePicker('timeToWork')"></ion-input>
     <ion-datetime hideWhen="android" displayFormat="HH:mm" [(ngModel)]="timeToWork"></ion-datetime>
   </ion-item>
 
   <ion-item>
     <ion-label stacked >Tempo de Almoço</ion-label>
-    <ion-input type="text" [readonly]="true" showWhen="android" [(ngModel)]="lunchTime" (focus)="nativePicker('lunchTime')" (click)="nativePicker('lunchTime')"></ion-input>
+    <ion-input type="text" [readonly]="true" showWhen="android" [(ngModel)]="lunchTime" (ionFocus)="nativePicker('lunchTime')" (click)="nativePicker('lunchTime')"></ion-input>
     <ion-datetime hideWhen="android" displayFormat="HH:mm" [(ngModel)]="lunchTime"></ion-datetime>
   </ion-item>
 
   <ion-item>
     <ion-label stacked>Minutos de Tolerância</ion-label>
-    <ion-datetime displayFormat="HH:mm" [(ngModel)]="tolerance"></ion-datetime>
+    <ion-input type="text" [readonly]="true" showWhen="android" [(ngModel)]="tolerance" (ionFocus)="nativePicker('tolerance')" (click)="nativePicker('tolerance')"></ion-input>
+    <ion-datetime hideWhen="android" displayFormat="HH:mm" [(ngModel)]="tolerance"></ion-datetime>
   </ion-item>
   
   <ion-item>
