Adjusted initialization performance
Adjusted initialization performance.
Fixed multiple alerts when trigger on navigation.

--- a/src/pages/config/config.html
+++ b/src/pages/config/config.html
@@ -21,7 +21,7 @@
   </ion-item>
 
   <ion-item>
-    <ion-label stacked>Minutos de Tolerância</ion-label>
+    <ion-label stacked>Tempo de Tolerância</ion-label>
     <ion-input type="text" [readonly]="true" showWhen="android" [(ngModel)]="tolerance" (ionFocus)="nativePicker('tolerance')" (click)="nativePicker('tolerance')"></ion-input>
     <ion-datetime hideWhen="android" displayFormat="HH:mm" [(ngModel)]="tolerance"></ion-datetime>
   </ion-item>
